[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reltc"
version = "1.0.0"
description = "Linux TC command-genearator"

authors = [
  { name="Ariel Tubul" }
]

readme = "README.md"
dependencies = [
  "PyQt5",
]

requires-python = ">=3.7"
